--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       * {
         font-family: "Roboto", sans-serif;
       }
+      *::-webkit-scrollbar {
+        display: none; 
+      }
     </style>
     <title>Vite + React</title>
   </head>
